curation in main menu

--- a/css/style.css
+++ b/css/style.css
@@ -59,12 +59,12 @@ nav {
 }
 .main_menu ul li a {
     font-size: 18px;
-    font-weight: 400 !important;
+    /* font-weight: 400 !important; */
     color: #fff;
     transition: .5s;
 }
 .main_menu ul li:hover a {
-    /* font-weight: 700; */
+    font-weight: 700;
     color: #4756DF;
 }
 
