--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,9 @@ nav {
 /* agenc section css end  */
 
 /* Client Reviews section css start */
-#client_reviwe{}
+#client_reviwe{
+    padding-bottom: 227px;
+}
 .client_reviwe_title{
     text-align: center;
     padding: 0px 340px;
@@ -322,4 +324,175 @@ nav {
     margin-bottom: 130px;
     
 }
+
+.reviwe_grid {
+    transition: .5s;
+    border-radius: 20px;
+    padding: 54px 62px;
+}
+.reviwe_grid:hover{
+    background: #F4EFEF;
+}
+
+.reviwe {
+    
+}
+.reviwe .quote {
+    color: rgb(106 77 244 / 40%);
+    font-size: 57px;
+    transition: .5s;
+}
+.reviwe_grid:hover .reviwe .quote{
+    color: rgb(106 77 244 / 10%);
+}
+.reviwe_text{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #7B7B7B;
+    margin: 20px 0;
+}
+
+.star {
+    font-size: 24px;
+    color: #F9BD2C;
+}
+.star span{}
+
+.reviwer{
+    gap: 20px;
+    margin-top: 30px;
+}
+
+.user_image img{}
+
+.user_destination{}
+.user_destination h6{
+    margin: 0;
+    font-size: 20px;
+    color: #232323;
+    font-weight: 600;
+}
+.user_destination p{
+    margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #7B7B7B;
+}
 /* Client Reviews section css end */
+
+/* contact section css start  */
+#contact{
+    padding: 273px 0 227px 0;
+    background: #DCDCDC;
+}
+.contact_text{}
+.contact_text h3 {
+    font-size: 45px;
+    font-weight: 700;
+    color: #151515;
+    padding-right: 185px;
+    margin-bottom: 20px;
+}
+.contact_text p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #7B7B7B;
+    margin-bottom: 11px;
+    padding-right: 120px;
+}
+
+.contact_form {
+    width: 526px;
+    padding: 38px 43px 84px;
+    background: #fff;
+    border-radius: 20px;
+}
+.contact_form h3{
+    font-size: 30px;
+    font-weight: 700;
+    color: #151515;
+    padding-right: 185px;
+    padding: 0;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.contact_form label{
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 26px;
+    color: #151515;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+.contact_form input {
+    /* height: 64px; */
+    margin-bottom: 28px;
+    padding: 23px 19px;
+    outline: none !important;
+    border-radius: 10px;
+    width: 100%;
+    border: 1px solid #D0D0D0;
+}
+.contact_form input placeholder{
+    color: #D0D0D0;
+}
+.contact_form button{
+    padding: 19px 0;
+    color: #fff;
+    background: #6A4DF4;
+    border-radius: 10px;
+    width: 100%;
+    border: none;
+    outline: none;
+}
+/* contact section css end  */
+
+/* footer section css start  */
+footer{
+    padding-top: 150px;
+
+}
+
+.side_logo{}
+.side_logo img{}
+.side_logo p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #7B7B7B;
+    margin-top: 30px;
+    padding-right: 55px;
+}
+
+.footer_menu{}
+.footer_menu .link:nth-child(3){
+    margin-top: 30px;
+}
+
+.footer_menu h5{
+    font-size: 20px;
+    font-weight: 600;
+    color: #151515;
+    margin-bottom: 40px;
+}
+.footer_menu :nth-child(3){
+    margin-top: 10px;
+}
+.footer_menu ul{
+    padding: 0;
+}
+.footer_menu ul li{
+    display: block;
+}
+.footer_menu ul li a {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #7B7B7B;
+    display: block;
+    margin-bottom: 27px;
+}
+/* footer section css end  */
